--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,14 @@
 /* Project CSS 
 ============================================================
 ============================================================*/
+body {
+	font: 22px Arial, Helvetica, sans-serif;
+	color: #000000;
+	margin: 0px;
+	padding: 0px;
+ background-color:#CCC;
 
-
+	
 /* HEADER ============================== */
 
 /* ABOUT ============================== */
