--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,79 @@
 ============================================================
 ============================================================*/
 body {
-	font: 22px Arial, Helvetica, sans-serif;
+	font: Arial, Helvetica, sans-serif;
 	color: #000000;
-	margin: 0px;
 	padding: 0px;
- background-color:#CCC;
-
+ 	background-color:#CCC;
+ 	margin: auto;
+	background: #242424;
+	font-weight:90;
+    width: 60%;
+}
 	
-/* HEADER ============================== */
+header{
+	padding-bottom: 10px;
+	color: #2390ff;
+	font-size: 2.5em;
+}
 
 /* ABOUT ============================== */
-
+#about{
+	padding: 25px;
+	background: #8b909c;
+	color: #303030;
+}
 /* COMPONENTS ============================== */
+section{
+	padding: 25px;
+}
+
+img{
+border: solid 3px #23ffff;
+width: 100%;
+text-align: center;
+
+}
+
+#tree{
+	
+}
+
+h1{
+	color: #2390ff;
+	font-size: 2.5em;
+}
+
+article{
+	margin-top: 10px ;
+	padding: 20px;
+	background: #8b909c;
+	color: #303030;
+}
+
+h2{
+	color: #23ffff;
+	font-size: 1.5em;
+}
+
+h3{
+	font-size: 1.25em;
+	text-decoration: underline;
+	padding: 2px;
+}
+
+p{
+	font-size: 1.05em;
+	padding: 2px;
+}
+
+button {
+   border: solid 1.5px #23ffff;
+   margin-top: 10px;
+}
+
+footer{
+	font-size: 0.8em; 
+	color:#303030;
+	text-align: right;
+}
