--- a/css/main.css
+++ b/css/main.css
@@ -15,18 +15,29 @@ body {
 header{
 	padding-bottom: 10px;
 	color: #2390ff;
-	font-size: 2.5em;
+	font-size: 2.75em;
+	text-align:center;
+	
 }
 
 /* ABOUT ============================== */
+
+
 #about{
 	padding: 25px;
 	background: #8b909c;
-	color: #303030;
+	color: #D3D3D3;
+	float:right;
+	background-image:url(../image/bg.jpg);
+	border: ridge 3px #23ffff;
+	margin-bottom:15px;
 }
+
+
 /* COMPONENTS ============================== */
 section{
 	padding: 25px;
+	
 }
 
 img{
@@ -36,18 +47,20 @@ text-align: center;
 
 }
 
-#tree{
-	
-}
-
 h1{
 	color: #2390ff;
 	font-size: 2.5em;
+	text-align:center;
+	padding:10px;
+
 }
 
+
 article{
-	margin-top: 10px ;
+	margin: 10px ;
+	margin-bottom:10px;
 	padding: 20px;
+	
 	background: #8b909c;
 	color: #303030;
 }
@@ -55,6 +68,9 @@ article{
 h2{
 	color: #23ffff;
 	font-size: 1.5em;
+	padding-bottom:10px;
+	padding-top:10px;
+	padding-left:15px;
 }
 
 h3{
@@ -64,13 +80,23 @@ h3{
 }
 
 p{
-	font-size: 1.05em;
+	font-size: 1.15em;
 	padding: 2px;
 }
 
 button {
    border: solid 1.5px #23ffff;
    margin-top: 10px;
+  
+   background: #8b909c;
+   padding: 8.5px 17px;
+   border-radius: 14px;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 18px;
+   text-decoration: none;
+   vertical-align: middle;    
 }
 
 footer{
