--- a/components/1/component.html
+++ b/components/1/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Jonathon Polley</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,6 +11,35 @@
 <body>
 
 	<!-- Component -->
+    
+    <header>
+		
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Products</a>
+					<ul>
+						<li><a href="#">Products 1</a></li>
+						<li><a href="#">Products 2	</a></li>
+						<li><a href="#">Products 3</a>
+							<ul>
+								<li><a href="#">Products 3.5</a></li>
+								<li><a href="#">Products 3.5</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a href="#">About</a>
+					<ul>
+						<li><a href="#">About Me</a></li>
+						<li><a href="#">About Us</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</nav>
+
+	</header>
 
 	<!-- End Component -->
 	
