--- a/components/2/component.html
+++ b/components/2/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Jonathon Polley</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,6 +11,21 @@
 <body>
 
 	<!-- Component -->
+    
+    <div class="login-card">
+            <h1>Log-in</h1>
+                		<br>
+                  <form>
+                    <input type="text" name="user" placeholder="Username">
+                    <input type="password" name="pass" placeholder="Password">
+                    <input type="submit" name="login" class="login login-submit" value="login">
+                  </form>
+            
+                  <div class="login-help">
+                    <a href="#">Register</a> &#149;
+                    <a href="#">Forgot Password</a>
+                  </div>
+	</div>
 
 	<!-- End Component -->
 	
