--- a/components/3/component.html
+++ b/components/3/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Jonathon Polley</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,6 +11,41 @@
 <body>
 
 	<!-- Component -->
+<h1>3: Photo Slideshow</h1>    
+
+<article>
+
+	<input type="radio" name="slide_switch" id="id1"/>
+        <label for="id1">
+            <img src="image/1.jpg" width="100"/>
+        </label>
+	<img src="image/1.jpg"/>
+
+	<input type="radio" name="slide_switch" id="id2" checked="checked"/>
+        <label for="id2">
+            <img src="image/2.jpg" width="100"/>
+        </label>
+	<img src="image/2.jpg"/>
+	
+	<input type="radio" name="slide_switch" id="id3"/>
+        <label for="id3">
+            <img src="image/3.jpeg" width="100"/>
+        </label>
+	<img src="image/3.jpeg"/>
+	
+	<input type="radio" name="slide_switch" id="id4"/>
+        <label for="id4">
+            <img src="image/4.jpg" width="100"/>
+        </label>
+	<img src="image/4.jpg"/>
+	
+	<input type="radio" name="slide_switch" id="id5"/>
+        <label for="id5">
+            <img src="image/5.jpg" width="100"/>
+        </label>
+	<img src="image/5.jpg"/>
+    
+</article>
 
 	<!-- End Component -->
 	
