--- a/components/4/component.html
+++ b/components/4/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Jonathon Polley</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,6 +11,14 @@
 <body>
 
 	<!-- Component -->
+    
+    <div class="card transition">
+  		<h2 class="transition">Header 1</h2>
+          <p>Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.Aenean lacinia 		bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.</p>
+          	<div class="cta-container transition"><a href="#" class="cta">Next Page</a></div>
+          		<div class="card_circle transition"></div>
+	</div>
+  
 
 	<!-- End Component -->
 	
