--- a/components/5/component.html
+++ b/components/5/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Jonathon Polley</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,8 +11,31 @@
 <body>
 
 	<!-- Component -->
+    <article></article>
+    
+    
+    <footer>
+    	<ul>
+        	<li><a>About Us</a></li>        	
+            <li><a>Contact</a></li>
+            <li><a>FAQs</a></li>  
+        </ul>    
+        <ul>          	
+            <li><a>Home</a></li>
+            <li><a>Jobs</a></li>        	
+            <li><a>Sign In</a></li>
+        </ul>
+        
+        
+    	<img src="image/searchbar.png"/> 
+    
+    </footer>
+    
+    <footer> 
+   	  <p>JSP &copy; Friday, November 6, 2015</p>
+	</footer>
 
-	<!-- End Component -->
+<!-- End Component -->
 	
 </body>
 </html>
